@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST pdbpp-0.6.tar.gz 18996 RMD160 844621bafbfd65ab8ce4f3bc5bb273b9af6d3d60 SHA1 e8a2d344b34e57c16fbb07295ec24b167d4d6df3 SHA256 8b2527c5cd1f9a7f4cf7fb2899277f1b75f3dcbace4a0f5b19047ecc95499f86
 DIST pdbpp-0.7.tar.gz 17436 RMD160 329a9078e742bf4b52df1d10767266796647de50 SHA1 0987b26df955b227c471e8033cd10ed65eba3d34 SHA256 36090be1690ad93c6187eaab6a93473495aa642f8d84abd41a2192a4d40a9f6d
-EBUILD pdbpp-0.6.ebuild 532 RMD160 716e342897b03e30ab6f8ef2870063b0cf743e45 SHA1 fb7b6728d41a7b0ed28f993c9abcebe85d8c82d2 SHA256 26ca7e8d6003d60dd04764d60991639fdb24204cac557a6111f1070ee97b8a86
-EBUILD pdbpp-0.7.ebuild 533 RMD160 c03382a252cfbd96c9e2d0f8b505581e1fccd6ed SHA1 c6483eb7487e2b3e37d713b64e9363c9e65e06ac SHA256 2a534025089d74b897143fb5fc30245820a7cc06269d9ad70d3325c1cca3d8da
-MISC ChangeLog 812 RMD160 b20f21d3b51fe21dacf4f43f86d2c47c237da0a7 SHA1 8c96c7776b359cc7bf63a974f85d2af62aac93b8 SHA256 9c628b8123150b73bafcf9e12f1d3263386d15864b6fa8cebd450681e61d91c5
+EBUILD pdbpp-0.7.ebuild 532 RMD160 716e342897b03e30ab6f8ef2870063b0cf743e45 SHA1 fb7b6728d41a7b0ed28f993c9abcebe85d8c82d2 SHA256 26ca7e8d6003d60dd04764d60991639fdb24204cac557a6111f1070ee97b8a86
+MISC ChangeLog 914 RMD160 79a3a3c2dd5e1a127e4d6ec77ca3eea2e47e2df3 SHA1 1b6af3b8da981e81cecb5a196e12d068dc00f835 SHA256 c01750801473843302530d2925342c51a4fb79f37e994cbfbcfca47b876c91d4
 MISC metadata.xml 691 RMD160 8bbf5e7b7dad2b26974de65abd63a1f536640c1f SHA1 87c62f0fe49afeaafbeb8597b04651247e7fc1cf SHA256 b08c4c8a86192103050db7425ba65a095e1654c663cd7dcff68789a4a897ffca
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3TvYUACgkQzJrj3cAXR0mHnQCdHQi7tZIUCZeW2W8bjBMZv5nJ
-KFsAn2Ld6hhk3F3tyt+HW2FJgz5ME1CX
-=Vs6S
+iEYEARECAAYFAk3TxhoACgkQzJrj3cAXR0mg2QCffbQKYTcH9WKsQFwa7RW/stnp
+HgIAnieTdIZfPjth3E1VxGs1oTykqcbk
+=K4Ni
 -----END PGP SIGNATURE-----
