@@ -1,26 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=3
-SUPPORT_PYTHON_ABIS="1"
-PYTHON_DEPEND="2"
-# 3.x is restricted due to exception syntax
-RESTRICT_PYTHON_ABIS="3.*"
-
-inherit jnrowe-pypi
-
-DESCRIPTION="An enhanced drop-in replacement for pdb"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="amd64 x86"
-IUSE="test"
-
-DEPEND="dev-python/setuptools
-	test? ( dev-python/py )"
-RDEPEND="dev-python/fancycompleter
-	dev-python/wmctrl
-	dev-python/pygments"
-
-PYTHON_MODNAME="pdb.py"
