@@ -14,7 +14,7 @@ DESCRIPTION="An enhanced drop-in replacement for pdb"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE="test"
 
 DEPEND="dev-python/setuptools
