@@ -1,4 +1,3 @@
-REM 2011-05-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/pdbpp-0.7 %a
 REM 2011-05-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/plac-0.8.1 %a
 REM 2011-05-18 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 app-misc/pw-0.1.4 %a
 REM 2011-05-25 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/virtualenvwrapper-2.7 %a
