@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 May 2011; James Rowe <jnrowe@gmail.com> -pdbpp-0.6.ebuild,
+  pdbpp-0.7.ebuild:
+  Keyworded x86.
+
   18 May 2011; James Rowe <jnrowe@gmail.com> pdbpp-0.7.ebuild:
   Keyworded amd64.
 
